--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -1,20 +1,23 @@
+#header {
+	//@include position(absolute, $top: 0, $left: 0, $right: 0);
+	//-webkit-box-shadow: 0 1px 4px 0 $black;
+  //box-shadow: 0 1px 4px 0 $black;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+  background: $complementary-light-color1;
+  border-bottom: 5px solid $complementary-dark-color3;
+	padding: $global-padding $global-edge-padding;
+	position: relative;
+	z-index: 1;
+}
+
 #bizcubeTicketing {
 	color: $dark-gray;
 	font-weight: bold;
 	font-size: 22px;
 	text-transform: uppercase;
-}
-
-#header {
-	//@include position(absolute, $top: 0, $left: 0, $right: 0);
-	-webkit-box-shadow: 0 1px 4px 0 $black;
-  box-shadow: 0 1px 4px 0 $black;
-  background: $complementary-light-color1;
-  border-bottom: 5px solid $complementary-dark-color3;
-
-	position: relative;
-	z-index: 1;
-
 }
 
 .title-bar {
