--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -54,6 +54,7 @@
 
 @import 'components/mixins';
 @import 'components/main';
+@import 'components/layout';
 @import 'components/fonts';
 @import 'components/header';
 @import 'components/footer';
