--- a/src/assets/scss/components/login.scss
+++ b/src/assets/scss/components/login.scss
@@ -2,17 +2,17 @@
   #mainContent {
     @include border-radius(8px);
 
+    height: 95%;
+    width: 90%;
 
     @include breakpoint(medium) {
-      @include position(absolute,$left:30%,$top:20%);
+      width: 60%;
       height: auto;
-      width: 40%;
 
     }
     @include breakpoint(large) {
-      @include position(absolute,$left:35%);
       //height: 30%;
-      width: 30%;
+      width: 400px;
     }
 
     .formCallout  {
