--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -21,9 +21,9 @@
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   </head>
   <body id="page-{{page}}">
-    <div id="main" class="off-canvas-wrapper"  >
+    <div id="main" class="">
       {{> header}}
-      <div id="mainContent" class="grid-container off-canvas-content">
+      <div id="mainContent" class="">
         {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is
           created. --}}
         {{> body}}
