--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,29 +1,20 @@
 <header id="header">
-  <div class="title-bar" data-responsive-toggle="mainMenu"  data-hide-for="medium">
-    <button class="menu-icon" type="button" data-open="mainMenuLeft"></button>
-    <div class="title-bar-title"><a href="{{root}}index.html" id="bizcubeTicketing">Bizcube Ticketing</a></div>
-  </div>
-<div>
-  <div id="mainMenu" class="grid-container top-bar" >
-    <div class="top-bar-left">
-      <a href="{{root}}index.html" id="bizcubeTicketing">Bizcube Ticketing</a>
-    </div>
-    <nav class="top-bar-right">
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li style="display:none" id="navPackages"><a href="{{root}}Ticketing/packages.html"><i class="icon"><img src="{{root}}assets/img/icon-mid-packages.png" /></i> Prdocuts</a></li>
-        <li style="display:none"id="navReport"><a href="#"><i class="icon"><img src="{{root}}assets/img/icon-mid-reports.png" /></i> Reports</a></li>
-        <li id="navUser"><a href="#"><i class="icon"><img src="{{root}}assets/img/icon-mid-user.png" /></i> User</a>
-          <ul class="menu vertical">
-            <li><a href="{{root}}Ticketing/profile.html">Profile</a>
-            <li><a href="{{root}}Ticketing/changeMyPwd.html">Change Password</a>
-            <li><a href="#" id="logOut">Logout</a>
-          </ul>
-        </li>
-        <li style="display:none" id="navSettings"><a href="{{root}}index.htm"><i class="icon"><img src="{{root}}assets/img/icon-mid-settings.png" /></i> Settings</a></li>
-      </ul>
-    </nav>
-  </div>
-</div>
+  <a href="{{root}}index.html" id="bizcubeTicketing">Bizcube Ticketing</a>
+  <nav>
+    <ul class="dropdown menu" data-dropdown-menu>
+      <li style="display:none" id="navPackages"><a href="{{root}}Ticketing/packages.html"><i class="icon"><img src="{{root}}assets/img/icon-mid-packages.png" /></i> Prdocuts</a></li>
+      <li style="display:none"id="navReport"><a href="#"><i class="icon"><img src="{{root}}assets/img/icon-mid-reports.png" /></i> Reports</a></li>
+      <li id="navUser"><a href="#"><i class="icon"><img src="{{root}}assets/img/icon-mid-user.png" /></i> User</a>
+        <ul class="menu vertical">
+          <li><a href="{{root}}Ticketing/profile.html">Profile</a>
+          <li><a href="{{root}}Ticketing/changeMyPwd.html">Change Password</a>
+          <li><a href="#" id="logOut">Logout</a>
+        </ul>
+      </li>
+      <li style="display:none" id="navSettings"><a href="{{root}}index.htm"><i class="icon"><img src="{{root}}assets/img/icon-mid-settings.png" /></i> Settings</a></li>
+    </ul>
+  </nav>
+
 <div id="mainMenuLeft" class="off-canvas position-left" data-off-canvas>
 
     <button class="close-button" aria-label="Close menu" type="button" data-close>
