Login style modified for grid

--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -14,11 +14,19 @@ html, body {
   max-width: 1400px;
   margin: 0 auto;
 }
+#mainContent {
+  min-height: 400px;
+}
 
-.page-noframe #main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.page-noframe {
+  #main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #mainContent {
+    min-height: auto;
+  }
 }
 
 #header {
