--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -11,8 +11,11 @@ html, body {
     'f f f f f f f f f f f f';
 
   height: 100%;
-  max-width: 1400px;
+  //max-width: 1400px;
   margin: 0 auto;
+}
+#mainMenu {
+
 }
 #mainContent {
   min-height: 400px;
