--- a/src/assets/scss/components/mixins.scss
+++ b/src/assets/scss/components/mixins.scss
@@ -1,9 +1,10 @@
-@mixin position($position, $top: null, $right: null, $bottom: null, $left: null) {
+@mixin position($position, $top: null, $right: null, $bottom: null, $left: null, $zIndex:null) {
   position: $position;
   top: $top;
   right: $right;
   bottom: $bottom;
   left: $left;
+  z-index: $zIndex;
 }
 
 @mixin scrollY($height: 300px) {
@@ -121,7 +122,7 @@
 }
 
 @mixin activeDropDown {
-  @include border-radius($radius: 10px);
-  background: darken($complementary-light-color1,2);
-  color: $dark-gray;
+  //@include border-radius($radius: 10px);
+  background: $complementary-dark-color2;
+  color: $complementary-light-color1;
 }
