--- a/src/assets/scss/components/nav.scss
+++ b/src/assets/scss/components/nav.scss
@@ -1,12 +1,63 @@
-nav {
-  text-transform: uppercase;
+#mainMenuContainer {
+  display: none;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
+
+}
+
+#mainMenu {
+  @include position(absolute, $top: 0, $right: 0, $left: 0, $zIndex: 50);
+  display: grid;
+  grid-template-columns: 30% repeat(auto-fit, minmax(70%,1fr));
+  grid-template-rows: 400px;
+  //visibility: hidden;
+  //text-transform: uppercase;
+  width: 100%;
 
   //menu links
   a {
-    color: $dark-gray;
+    display:block;
+    color: $complementary-light-color3;
+    padding: 0.8rem 1rem;
+
     &:hover {
       @include activeDropDown;
+      background: $complementary-dark-color2;
     }
+  }
+
+  ul {
+    height: 100%;
+    margin: 0;
+    overflow-y:auto;
+    padding: 0;
+
+
+    li {
+      border-top: 1px solid $complementary-dark-color1;
+      list-style: none;
+      padding: 0;
+    }
+    li:nth-child(1) {
+      border: none;
+    }
+  }
+
+  .module {
+    //min-width: 300px;
+    //width: 20%;
+      background: $complementary-dark-color2;
+
+      a:hover {
+        @include activeDropDown;
+        background: $complementary-dark-color3;
+      }
+  }
+  .moduleMenu {
+    //display: none;
+    //min-width: 300px;
+    //width: 80%;
   }
 
   .dropdown.menu .is-active > a {
@@ -34,6 +85,25 @@ nav {
           color: $complementary-light-color1;
         }
       }
+  }
+}
+
+#navSecondary {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  li {
+    list-style: none;
+
+    a {
+      display: inline-block;
+      padding: 0.8rem 0.8rem;
+    }
+  }
+
+  .text {
+    display: none;
   }
 }
 
