set primary color

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -68,7 +68,7 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
-$contrast-color1: #f6851f;
+$contrast-color1: #5dc0ee;
 $contrast-color2: #008bdb;
 $foundation-palette: (
   primary: $contrast-color1,
@@ -89,8 +89,7 @@ $complementary-dark-color1: #a7b0b7;
 $complementary-dark-color2: #7e95a6;
 $complementary-dark-color3: #627582;
 
-$contrast-color1: #f6851f;
-$contrast-color2: #008bdb;
+
 $body-background: $light-gray;
 $body-font-color: $black;
 $body-font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
