--- a/src/assets/scss/components/layout.scss
+++ b/src/assets/scss/components/layout.scss
@@ -4,11 +4,10 @@ html, body {
 
 #main {
   display: grid;
-  grid-template-rows: 100px auto 60px;
+  grid-template-rows: 80px auto;
   grid-template-areas:
     'h h h h h h h h h h h h'
-    'mc mc mc mc mc mc mc mc mc mc mc mc'
-    'f f f f f f f f f f f f';
+    'mc mc mc mc mc mc mc mc mc mc mc mc';
 
   height: 100%;
   //max-width: 1400px;
@@ -38,7 +37,7 @@ html, body {
 }
 
 #footer {
-  grid-area: f;
+  display: none;
 }
 
 #mainContent {
@@ -46,7 +45,16 @@ html, body {
 }
 
 @include breakpoint(medium) {
-
+  #main {
+    grid-template-rows: 80px auto 60px;
+    grid-template-areas:
+    'h h h h h h h h h h h h'
+    'mc mc mc mc mc mc mc mc mc mc mc mc'
+    'f f f f f f f f f f f f';
+  }
+  #footer {
+    grid-area: f;
+  }
 }
 
 @include breakpoint(large) {
