--- a/src/layouts/columns-3.html
+++ b/src/layouts/columns-3.html
@@ -15,7 +15,7 @@
 
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   </head>
-  <body id="page-{{page}}">
+  <body id="page-{{page}}" class="columns-3">
     <div id="main" class="">
       {{> header}}
       <div id="mainContent" class="">
