--- a/src/layouts/noframe.html
+++ b/src/layouts/noframe.html
@@ -1,3 +1,5 @@
+{{!-- no columns, just a box in the center --}}
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -7,8 +9,7 @@
     <title>
       {{> title}}
     </title>
-    <link rel="shortcut icon" href="{{root}}favicon.ico" />
-    <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    {{> header-settings}}
 
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   </head>
@@ -18,9 +19,6 @@
             {{> body}}
       </div> <!-- content end -->
     </div>
-    <script src="{{root}}assets/js/app.js"></script>
-    {{#ifpage 'login'}}
-      <script src="{{root}}assets/js/single-page/login.js"></script>
-    {{/ifpage}}
+    {{> scripts}}
   </body>
 </html>
