added background image for main

--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -1,5 +1,5 @@
 #main {
-	background: $light-gray;
+	background: $light-gray url(../img/cubes.png) repeat center center;
 	//@include position(relative);
   //height: 100%;
 }
